# cognito-api-authorizer-rust

./: README.md  samconfig.toml  template.yaml
events/: authorizer-event.json
rust_app/: Cargo.toml
rust_app/src/: lib.rs  main.rs
rust_app/tests/: test_authorizer.rs
