[package]
name = "cognito-api-authorizer-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lambda_runtime = "0.14.2"
aws_lambda_events = "0.16.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
lru = "0.9.0"
aws-config = "1.8.1"
aws-sdk-secretsmanager = "1.78.0"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.22", features = ["json"] }
base64 = "0.22.1"
rsa = "0.9.0"
