[package]
name = "cognito-api-authorizer-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lambda_runtime = "0.14.2"
aws_lambda_events = "0.16.1"
aws-config = "1.8.1"
aws-sdk-secretsmanager = "1.78.0"
aws-sdk-cognitoidentityprovider = "1.87.0"
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["macros"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt"] }
once_cell = "1.21.3"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
